...
            android:id="@+id/contenedorHistorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <Button
            android:id="@+id/btnVolverInicioHistorial"
            style="@style/GymTrack_Button_Secondary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/gt_button_height"
            android:layout_marginTop="@dimen/gt_gap_large"
            android:text="Volver al inicio" />

...
