...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/gt_gap_medium"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnTiempo60"
                style="@style/GymTrack_Button_Secondary"
                android:layout_width="0dp"
                android:layout_height="@dimen/gt_button_height"
                android:layout_weight="1"
                android:text="60 s" />

...
